Repaired carousel error that was causing poor visibility

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -373,3 +373,11 @@ h3.about-header {
     float: none;
 }
  }
+
+ @media screen and (max-width:600px) {
+     #myCarousel {
+    font-family: 'Montserrat', sans-serif;
+    overflow: scroll;
+}
+     }
+
